# Chip8

./: CMakeLists.txt  README.md
includes/: chip8.h  decode.hpp  shader.hpp  util.hpp
shaders/: quad.fs  quad.vs
src/: chip8.cpp  main.cpp
